2006-03-27  Tim-Philipp Müller  <tim at centricular dot net>

	Patch by: Christian Kirbach

	* configure.ac:
	  Remove CXX tag from AS_LIBTOOL_TAGS, just like we did for
	  -good. Fixes build on some systems (#331838).

2006-03-24  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/realmedia/rmdemux.c: (gst_rmdemux_add_stream),
	(gst_rmdemux_parse_cont):
	  Extract more tags and also post codec name tag on the
	  bus so this shows up in totem and nautilus.

2006-03-24  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/realmedia/rmdemux.c: (gst_rmdemux_add_stream),
	(gst_rmdemux_fill_audio_packet), (gst_rmdemux_parse_packet):
	  Extra data usually goes into the caps as 'codec_data', not
	  as first buffer into the stream.
	  Need to byte swap AC3 content in realmedia files for some
	  reason (fixes #331588).

2006-03-24  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/realmedia/rmdemux.c: (gst_rmdemux_init),
	(gst_rmdemux_validate_offset), (gst_rmdemux_loop),
	(gst_rmdemux_parse_mdpr), (gst_rmdemux_parse_packet):
	  When operating in pull mode, post an error message on the
	  bus when all source pads are unlinked or some other fatal
	  error occured (#323023). Regrade some recurring debug messages
	  to LOG level. Convert c++-style comments into C-style ones.

2006-03-24  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/realmedia/rmdemux.c: (gst_rmdemux_perform_seek),
	(gst_rmdemux_loop), (gst_rmdemux_chain), (gst_rmdemux_send_event),
	(gst_rmdemux_all_source_pads_unlinked),
	(gst_rmdemux_at_least_one_stream_flowok), (gst_rmdemux_add_stream),
	(gst_rmdemux_parse_packet):
	* gst/realmedia/rmdemux.h:
	  Handle unlinked source pads properly and stop if all source pads
	  are unlinked (#323023).

2006-03-23  Wim Taymans  <wim@fluendo.com>

	Patch by: Michal Benes <michal dot benes at xeris dot cz>

	* gst/mpegstream/gstmpegdemux.c: (gst_mpeg_demux_init),
	(gst_mpeg_demux_parse_packet), (gst_mpeg_demux_parse_pes),